refactor(scanner): 重构API文档扫描器移除Smart-doc依赖
- 替换Smart-doc模型为自定义ApiField/ApiMethod模型
- 实现基于QDox/ASM的新扫描引擎
- 更新ApiDocSupport提取模型逻辑适配新模型
- 修改测试用例适配新的API模型结构
- 更新数据库同步服务处理新数据格式
- 移除Smart-doc相关配置和引导代码
- 更新CLI主类集成新的扫描引擎
- 重构参数签名工具使用新模型结构